--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,6 @@ add_executable(CPP
         stock.cpp
         stock.h
         vector.cpp
-        vector.h)
+        vector.h
+        container.cpp
+        container.h)
