--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,6 @@ add_executable(CPP
         vector.cpp
         vector.h
         container.cpp
-        container.h)
+        container.h
+        date.h
+        date.cpp)
