--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(.)
 
-add_executable(CPP
+add_executable(
+        CPP
         common.cpp
         common.h
         func.cpp
@@ -22,4 +23,7 @@ add_executable(CPP
         date.h
         date.cpp
         stack.h
-        stack.cpp)
+        stack.cpp
+        my_string.cpp
+        my_string.h
+)
